Altered text for button and password placeholder on EditProfile.jsx. Fixed problems with dark mode styling on DeleteAccount.jsx.

--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -250,8 +250,13 @@
 
 .delete-account-modal .warning-text {
   margin: 0 15px 15px 15px;
+  color: var(--text-color-primary);
 }
 
 .delete-account-modal .error-message {
   margin-bottom: 15px;
+}
+
+.delete-account-modal label {
+  color: var(--text-color-primary);
 }
